--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<div class="chatbox-message-wrapper">
 			<div class="chatbox-message-header">
 				<div class="chatbox-message-profile">
-					<img src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bWFufGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="" class="chatbox-message-image">
+					<img src="https://avatars.githubusercontent.com/u/96913755?v=4" alt="Blaizing Inferno Dragon123 LOGO" class="chatbox-message-image">
 					<div>
-						<h4 class="chatbox-message-name">Jonathan Doe</h4>
+						<h4 class="chatbox-message-name">BlaizingInfernoDragon123</h4>
 						<p class="chatbox-message-status">online</p>
 					</div>
 				</div>
@@ -51,7 +51,7 @@
 			</div>
 			<div class="chatbox-message-bottom">
 				<form action="#" class="chatbox-message-form">
-					<textarea rows="1" placeholder="Type message..." class="chatbox-message-input"></textarea>
+					<textarea rows="1" placeholder="Type your message..." class="chatbox-message-input"></textarea>
 					<button type="submit" class="chatbox-message-submit"><i class='bx bx-send' ></i></button>
 				</form>
 			</div>
