--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="chatbox-message-profile">
 					<img src="https://avatars.githubusercontent.com/u/96913755?v=4" alt="Blaizing Inferno Dragon123 LOGO" class="chatbox-message-image">
 					<div>
-						<h4 class="chatbox-message-name">BlaizingInfernoDragon123</h4>
+						<h4 class="chatbox-message-name">Inferno</h4>
 						<p class="chatbox-message-status">online</p>
 					</div>
 				</div>
