--- a/index.html
+++ b/index.html
@@ -60,14 +60,17 @@
 		</div>
 	</div>
 	               <footer class="footer">
-               <a href="https://github.com/blaizinginfernodragon123" style="color:#87CEEB" target="_blank" title="BlaizingInfernoDragon123">
+			       
+			       <center>
+               <a href="https://github.com/blaizinginfernodragon123" style="color:seagreen" target="_blank" title="BlaizingInfernoDragon123">
                 <i class="fa fa-github"></i><p> Copyright &copy;  2022BlaizingInfernoDragon123</p><br>
                  <img class="resize" src="https://avatars.githubusercontent.com/u/96913755?v=4" alt="BlaizingInfernoDragon123 LOGO" >
                 </a>
-                <a href="https://github.com/blaizinginfernodragon123/animated-login-form-in-html-and-pure-css/archive/refs/heads/main.zip" style="color:#87CEEB" target="_blank" title="Source Code? Click here">
+                <a href="https://github.com/blaizinginfernodragon123/animated-login-form-in-html-and-pure-css/archive/refs/heads/main.zip" style="color:seagreen" target="_blank" title="Source Code? Click here">
                  <i class="fa fa-download"></i>
                  <p>Source Code? Click here</p>
                  </a>
+				       </center>
                </footer>
 
 	<script src="js/script.js"></script>
