--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 	<link rel="stylesheet" href="css/style.css">
 	<title>Chatbox</title>
 </head>
+
+<style>
+img.resize {
+  max-width:25%;
+  max-height:25%;
+  border-radius: 50%;
+  cursor: pointer; 
+}
+</style>
+
 <body>
 
 	<div class="chatbox-wrapper">
@@ -66,7 +76,7 @@
                 <i class="fa fa-github"></i><p> Copyright &copy;  2022BlaizingInfernoDragon123</p><br>
                  <img class="resize" src="https://avatars.githubusercontent.com/u/96913755?v=4" alt="BlaizingInfernoDragon123 LOGO" >
                 </a>
-                <a href="https://github.com/blaizinginfernodragon123/animated-login-form-in-html-and-pure-css/archive/refs/heads/main.zip" style="color:seagreen" target="_blank" title="Source Code? Click here">
+                <a href="https://github.com/blaizinginfernodragon123/responsive-chatting-box-made-in-html-css-and-javascript-/archive/refs/heads/main.zip" style="color:seagreen" target="_blank" title="Source Code? Click here">
                  <i class="fa fa-download"></i>
                  <p>Source Code? Click here</p>
                  </a>
