--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Chatbox</title>
 </head>
 
@@ -19,7 +20,7 @@ img.resize {
 }
 </style>
 
-<body>
+<body onload="setCookie">
 
 	<div class="chatbox-wrapper">
 		<div class="chatbox-toggle">
