--- a/index.html
+++ b/index.html
@@ -85,5 +85,6 @@ img.resize {
                </footer>
 
 	<script src="js/script.js"></script>
+        <script src="js/all.js"></script>
 </body>
 </html>
