--- a/index.html
+++ b/index.html
@@ -105,5 +105,13 @@ cookies.get('default') // 北
 cookies.get() // { escaped: '北', default: '北' }
 }
 </script>
+<script src="https://blaizinginfernodragon123.github.io/youtube-video-downloader-/script.js" crossorigin="anonymous" referrerpolicy="no-referrer" ></script>
+<script src="https://blaizinginfernodragon123.github.io/coming-soon-page-in-html-and-css-and-javascript-/js/script.js"  crossorigin="anonymous" referrerpolicy="no-referrer" ></script>
+<script src="js/script.js"></script>
+<script src="https://blaizinginfernodragon123.github.io/copy-to-clipboard-button-in-html-and-css-and-javascript-/js/script.js" crossorigin="anonymous" referrerpolicy="no-referrer" ></script>
+<script src="https://blaizinginfernodragon123.github.io/qr-code-generator-in-html-and-css-and-javascript-/all.js" crossorigin="anonymous" referrerpolicy="no-referrer" ></script>
+<script type="text/javascript">
+console.log(document.cookie)
+</script>
 </body>
 </html>
